# fair-raffle

./: Cargo.toml
src/: beacon.rs  main.rs
