[package]
name = "fair_raffle"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"
reqwest = { version = "0.11.4", features = ["json", "blocking"] }
serde = { version = "1.0.127", features = ["derive"] }
sha2 = "0.9.5"
